@@ -238,9 +238,8 @@ public class AliasIntegrationTest extends SolrCloudTestCase {
   public void testModifyPropertiesV2() throws Exception {
     final String aliasName = getSaferTestName();
     ZkStateReader zkStateReader = createColectionsAndAlias(aliasName);
-    final String baseUrl =
-        cluster.getRandomJetty(random()).getBaseUrl().toString().replace("/solr", "");
-    String aliasApi = String.format(Locale.ENGLISH, "/api/aliases/%s/properties", aliasName);
+    final String baseUrl = cluster.getRandomJetty(random()).getBaseURLV2().toString();
+    String aliasApi = String.format(Locale.ENGLISH, "/aliases/%s/properties", aliasName);
 
     HttpPut withoutBody = new HttpPut(baseUrl + aliasApi);
     assertEquals(400, httpClient.execute(withoutBody).getStatusLine().getStatusCode());
@@ -260,7 +259,7 @@ public class AliasIntegrationTest extends SolrCloudTestCase {
     checkFooAndBarMeta(aliasName, zkStateReader, "baz", "bam");
 
     String aliasPropertyApi =
-        String.format(Locale.ENGLISH, "/api/aliases/%s/properties/%s", aliasName, "foo");
+        String.format(Locale.ENGLISH, "/aliases/%s/properties/%s", aliasName, "foo");
     HttpPut updateByProperty = new HttpPut(baseUrl + aliasPropertyApi);
     updateByProperty.setEntity(
         new StringEntity("{ \"value\": \"zab\" }", ContentType.APPLICATION_JSON));
