@@ -387,7 +387,7 @@ public class HttpSolrClient extends BaseHttpSolrClient {
 
     if (request instanceof V2Request) {
       if (System.getProperty("solr.v2RealPath") == null || ((V2Request) request).isForceV2()) {
-        basePath = baseUrl.replace("/solr", "/api");
+        basePath = changeV2RequestEndpoint(baseUrl);
       } else {
         basePath = baseUrl + "/____v2";
       }
